# libhntqtutils

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  service.cpp  service.hpp
